style.css
/*

Theme Name: Amanda Rincon Business Project Theme
Theme URI: Amanda Rincon Business Project
Author: Amanda Rincon
Description: Business project themes for WEI course
Version: 0.1
License: Open
Text Domain: amanda_rincon_business_project

*/

@import url("css/normalize.css");
@import url("css/skeleton.css");

*{
    color: #000000;
    font-size: 16px;
}

h1 {
	font-size: 4rem;
	color: #d65076;
	text-align: center;
	margin-top: 30px;
}

/*--- Search Bar --- */

#search-form {
	margin-top: 15px;
}

.wie-search-form .screen-reader-text, .wie-hide {
    position: absolute;
    left: -999em;
    width: 1em;
    overflow: hidden;
}

.search-bar-icon {
    border: none;
    text-align: center;
    padding: 5px;
    background-color: #fff;
    margin: 0;
    min-height: 20px;
    border-top: 1px solid #b7b7b7;
    border-bottom: 1px solid #b7b7b7;
    border-right: 1px solid #b7b7b7;
	-webkit-border-radius: 0px 7px 7px 0px;
	border-radius: 0px 7px 7px 0px;
}

input[type="search"] {
    border: none;
    border-top: 1px solid #b7b7b7;
    border-bottom: 1px solid #b7b7b7;
    border-left: 1px solid #b7b7b7;
    min-height: 20px;
    padding: 0;
    width: 100%;
    border-radius: inherit;
    margin:0;
    background-color: #fff;
	-webkit-border-radius: 7px 0px 0px 7px;
	border-radius: 7px 0px 0px 7px;
}

.fa {
	color:#b7b7b7;
}

.search-bar-icon .fa-2x {
    font-size: 1.4em;
}

/*--- Menu --- */

.menu-menu-container {
	margin-top: 20px;
	padding: 10px 0;
	border-top: 1px solid #000000;
	border-bottom: 1px solid #000000;
}

.menu-menu-container ul {
	width: 90%;
    margin: auto;
    padding: 0;
    list-style-type: none;
    list-style-image: none;
}

.menu-menu-container li {
    display: inline;
}

.menu-menu-container ul li a {
	color: #b7b7b7;
    text-decoration: none;
    margin: 4px;
    font-weight: bold;
	font-family: 'Lato', sans-serif;
	padding: 5px 40px 5px 40px;
	text-transform: uppercase;
	letter-spacing: 4px;
}

.menu-menu-container ul li a:hover {
    color: #55b4b0;
}

.menu-menu-container ul li.current-menu-item a {
	color: #55b4b0;
}

.single-post-thumbnail img {
	width: 100%;
	height: auto;
}

/*--- Home Page --- */

#hero {
	margin: 0;
	padding: 0;
	height: 100%;
	overflow-y: hidden;
	z-index: -999;
}

#hero img {
	width: 100%;
}

#logo {
	width: 20%;
	position: absolute;
	top: 40px;
	right: 0;
}

#logo img {
	width: 100%;
}

#social {
	width: 30%;
	position: absolute;
	top: 80px;
	left: 50px;
}

#social img {
	width: 6%;
	margin-right: 40px;
}

#social img:last-child {
	margin-right: 0;
}

#arrow {
	width: 10%;
	margin: auto;
}

#arrow img {
	width: 100%;
}

#about h1 {
	margin: 60px 0;
}

#about p {
	text-align: center;
	font-size: 2.25rem;
	color: #666666;
}

/*--- Pricing Page --- */

#pricing {
	padding: 0 30px;
	margin: 50px 0;
}

.four.columns {
	text-align: center;
}

/*--- Footer --- */

footer {
	margin-top: 100px;
}

